--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -172,10 +172,11 @@
                             <!-- Campo de estado -->
                             <div class="col-sm-12 col-md-6">
                                 <label for="estadoCliente" class="form-label">Estado</label>
-                                <select class="form-select form-control" id="estadoCliente" aria-label="estadoCliente">
+                                <select class="form-label form-select form-control" id="estadoCliente" aria-label="Estado cliente" required>
+                                    <option value="" disabled>Selecciona un estado</option>
                                     <option value="1">Vigente</option>
                                     <option value="2">Inactivo</option>
-                                </select required>
+                                </select>
                             </div>
                         </div>
                         <!--Footer del modal-->
