Pedidos parte de pedidos ya muestra, falta actualizar el status y repartidor

--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -188,9 +188,8 @@
                                 Cancelar
                             </button>
                             <!-- boton de actualizar -->
-                            <button type="button" id="actualizarBtn"
-                                class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular"
-                                onclick="botonActualizar()">
+                            <button type="submit" id="actualizarBtn"
+                                class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular">
                                 Actualizar
                             </button>
                         </div>
