--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -87,20 +87,18 @@
                     </div>
                 </div>
                 <!--Descripcion del comentario-->
-                <div class="d-flex flex-column contenedorElemento2 flex-wrap justify-content-center align-items-center">
-                    <div class="d-flex flex-column flex-wrap contenedorComentario">
-                        <h6 class="titillium-web-semibold color-3blue">Descripcion del comentario:</h6>
-                        <p class=""> Un zapato que la verdad recomiendo mucho, me gustan sus colores y es
-                            muy comodo, lo recomiendo para
-                            fiestas por que es muy elegante.
-                        </p>
+                <div class="d-flex flex-column flex-wrap contenedorComentario">
+                    <h6 class="titillium-web-semibold color-3blue Texto">Descripcion del comentario:</h6>
+                    <p class="Texto"> Un zapato que la verdad recomiendo mucho, me gustan sus colores y es
+                        muy comodo, lo recomiendo para
+                        fiestas por que es muy elegante.
+                    </p>
 
-                        <!--Boton para retirar comentario-->
-                        <div class="container p-0 m-0 mt-4">
-                            <button type="button" class="btn btn1 btn-primary" id="btnRetirar" onclick="RetirarC()">
-                                Retirar comentario
-                            </button>
-                        </div>
+                    <!--Boton para retirar comentario-->
+                    <div class="container p-0 m-0 mt-4">
+                        <button type="button" class="btn btn1 btn-primary" id="btnRetirar" onclick="updateEstado()">
+                            Retirar comentario
+                        </button>
                     </div>
                 </div>
             </div>
