--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -33,7 +33,17 @@
             </div>
             <div class="container"> <!--div contenedor del texto de comentarios y linea-->
                 <div class="contenidoP">
-                    <div class="nav-link rectanguloP z-0" id="rectanguloP"> <!--Contenedor con fondo gris-->
+                    
+                    <div class="nav-link rectanguloP z-0" id="rectanguloP">
+                        <div class="col-lg-12 col-md-11 d-flex justify-content-end mt-4 me-3">
+                            <div class="custom-select  me-5">
+                                <select class="form-select" aria-label="Default select example">
+                                    <option selected>Todos</option>
+                                    <option value="1">Activos</option>
+                                    <option value="2">Desactivados</option>
+                                </select>
+                            </div>
+                        </div> 
                         <div class="comentario mt-1" id="ComentarioC">
                             <div class="sizedbox"></div>
                         </div>
