Recuperacion de contraseña 100% funcional

--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -184,7 +184,7 @@ TODO importante // realtando algo
                                 <div class="d-flex justify-content-center">
                                     <div class="text-center col-sm-12 col-md-6">
                                         <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"
-                                            href="javascript:void(0);" onclick="showForgotPasswordStepThreeForm()"><i
+                                            href="javascript:void(0);"><i
                                                 class="bi bi-send"></i>
                                             Confirmar código</button>
                                     </div>
@@ -241,8 +241,7 @@ TODO importante // realtando algo
                                 <div class="d-flex justify-content-center">
                                     <div class="text-center col-sm-12 col-md-6">
                                         <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"><i
-                                                class="bi bi-send" href="javascript:void(0);"
-                                                onclick="showLoginFormRestablecer()"></i>
+                                                class="bi bi-send" href="javascript:void(0);"></i>
                                             Restablecer contraseña</button>
                                     </div>
                                 </div>
