Trabajadores - Update - Progreso Total 80%

--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -98,6 +98,9 @@
                                     <div class="col-md-6 mt-3">
                                         <label for="estadoInput" class="form-label">Estado del trabajador</label>
                                         <select id="estadoInput" name="estadoInput" class="form-select" required>
+                                            <option selected>Seleccione una opción</option>
+                                            <option value="1">Activo</option>
+                                            <option value="2">Desactivo</option>
                                         </select>
                                     </div>
                                     <div class="col-md-6 mt-3">
@@ -216,6 +219,9 @@
                                 <div class="col-md-6 mt-3">
                                     <label for="estadoInputD" class="form-label">Estado del trabajador</label>
                                     <select id="estadoInputD" name="estadoInputD" class="form-select" required>
+                                        <option selected>Seleccione una opción</option>
+                                        <option value="1">Activo</option>
+                                        <option value="2">Desactivo</option>
                                     </select>
                                 </div>
                                 <div class="col-md-6 mt-3">
@@ -223,12 +229,12 @@
                                     <select id="nivelInputD" name="nivelInputD" class="form-select" required>
                                     </select>
                                 </div>
-                                <!--Campo del contraseña del trabajador-->
+                                <!--Campo del contraseña del trabajador
                                 <div class="col-sm-12 col-md-6">
                                     <label for="contraTrabajador" class="form-label">Contraseña</label>
                                     <input id="contraTrabajador" type="password" name="contraTrabajador"
                                         class="form-control editableInput" required>
-                                </div>
+                                </div>-->
                             </div>
                             <!-- Pie de página del modal con margen superior -->
                             <div class="modal-footer mt-5">
