Trabajadores - 90% solo falta buscar

--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -153,10 +153,10 @@
                         </div>
                         <div
                             class="contenedorBotones col-11 z-0 d-flex flex-wrap justify-content-center justify-content-lg-start justify-content-md-start">
-                            <button type="button" class="btn btn3 btn-primary mx-4 my-2 shadow text18 titillium-web-regular
-                                ">Bloquear</button>
-                            <button type="button" class="btn btn3 btn-primary my-2 shadow text18 titillium-web-regular
-                                ">Desbloquear</button>
+                            <button type="button" class="btn btn3 btn-primary mx-4 my-2 shadow text18 titillium-web-regular" id="btnBloq" onclick="botonBloquear()"
+                            >Bloquear
+                            </button>
+                            <p id="textoInfo" class="text-white titillium-web-regular text-center d-flex justify-content-center align-items-center m-0"></p>
                         </div>
                     </div>
                 </div>
