Busqueada implementada efectividad 99.99% - trabajadores 100%

--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -129,7 +129,7 @@
 
                         <div class="search-container col-11">
                             <input type="search" class="form-control" name="search" placeholder="Buscar....."
-                                id="buscadorInputPedidos" required>
+                                id="inputBusqueda" required>
                             <span class="search-icon"><i class="bi bi-search"></i></span>
                             <span class="clear-icon" onclick="clearSearch()"><i class="bi clear-icon"></i></span>
                         </div>
