Restablecer contraseña - Progreso Total 100%

--- a/vistas/privado/detalles_usuario.html
+++ b/vistas/privado/detalles_usuario.html
@@ -205,7 +205,7 @@
                                     <!-- Botón para actualizar el registro -->
                                     <button type="button" id="agregarBtn"
                                         class="btn btn3 btn-primary shadow text18 titillium-web-regular"
-                                        onclick="botonAgregar()">
+                                        onclick="botonRestablecer()">
                                         Restablecer
                                     </button>
                                 </div>
